[osl/windows] crash when rendering finished. #51967

Closed
opened 2017-07-03 23:58:21 +02:00 by Ray molenkamp · 8 comments
Member

System Information
win7, X64

Blender Version
Broken: Latest master
Worked: Unknown.

Short description of error
When the rendering of this osl_uvtest_uvmap.blend file finishes, blender crashes on windows due to ShadingSystemImpl's destructor running before ShaderGroup's and it's still referencing the now deleted master.

Exact steps for others to reproduce the error
open file, hit f12

**System Information** win7, X64 **Blender Version** Broken: Latest master Worked: Unknown. **Short description of error** When the rendering of this [osl_uvtest_uvmap.blend](https://archive.blender.org/developer/F651208/osl_uvtest_uvmap.blend) file finishes, blender crashes on windows due to ShadingSystemImpl's destructor running before ShaderGroup's and it's still referencing the now deleted master. **Exact steps for others to reproduce the error** open file, hit f12
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

found the problem ,just unsure how to fix @brecht help?

found the problem ,just unsure how to fix @brecht help?

This issue was referenced by blender/cycles@7cc5d24b6b

This issue was referenced by blender/cycles@7cc5d24b6be7522071b492ab7e1245dfd40429d4

This issue was referenced by 3361f2107b

This issue was referenced by 3361f2107b9d8ac2d907a5c639398d86e3181ced

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for tracking down the cause, hopefully fixed now. I couldn't get my own Windows release build to crash, but with a debug build it reliably crashed and now works for me.

Thanks for tracking down the cause, hopefully fixed now. I couldn't get my own Windows release build to crash, but with a debug build it reliably crashed and now works for me.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51967
No description provided.