Fix T51967: OSL crash after rendering finished (mainly on Windows).